--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "src\\myenv\\Scripts\\python.exe"
+    "python.pythonPath": "src\\myenv\\Scripts\\python.exe",
+    "liveServer.settings.port": 5502
 }
